update osax? predicate to match new OSAXSIP project name

--- a/templates/partials/totalfinder/config.xcconfig.erb
+++ b/templates/partials/totalfinder/config.xcconfig.erb
@@ -39,7 +39,7 @@
     end
 
     def osax?
-      (@project=="OSAX" and @target == "TotalFinder") or (@project=="SIPOSAX" and @target == "TotalFinderSIP")
+      (@project=="OSAX" and @target == "TotalFinder") or (@project=="OSAXSIP" and @target == "TotalFinderSIP")
     end
 
     def agent?
