--- a/templates/partials/totalfinder/plugin.xcconfig.erb
+++ b/templates/partials/totalfinder/plugin.xcconfig.erb
@@ -3,7 +3,7 @@
 ///
 
 // we want to share plugins precompiled headers
-GCC_PREFIX_HEADER = <%= "#{totalfinder_path}/pchs/Plugin.pch" %>
+GCC_PREFIX_HEADER = <%= '../../pchs/Plugin.pch' %>
 GCC_INCREASE_PRECOMPILED_HEADER_SHARING = YES
 PRECOMPS_INCLUDE_HEADERS_FROM_BUILT_PRODUCTS_DIR = NO
 // modules interfere with  GCC_INCREASE_PRECOMPILED_HEADER_SHARING
