disable nonportable-include-path warning

--- a/templates/partials/common.xcconfig.erb
+++ b/templates/partials/common.xcconfig.erb
@@ -145,6 +145,7 @@ flags << '-Warc-retain-cycles'
 flags << '-Warc-unsafe-retained-assign'
 flags << '-Warc-non-pod-memaccess'
 flags << '-Wbind-to-temporary-copy'
+flags << '-Wno-nonportable-include-path'
 
 %>
 
